deploy-mtls-istio/manifests/demo-app.yaml
# demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: istio-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: httpd:2.4
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: istio-demo
spec:
  selector:
    app: hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: istio-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: curlimages/curl
        command: ["/bin/sleep", "3650d"]
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-no-istio
  namespace: test-mtls
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
